--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,8 @@
 *.json text eol=lf
 *.md   text eol=lf
 *.yaml text eol=lf
+*.yml  text eol=lf
 *.db   text eol=lf
+*.css  text eol=lf
 
 *.png  binary
