update how to get target actor

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
 /diwako-cpred-additions.lock
+/packs/cpr-additions-macros/000005.ldb
+/packs/cpr-additions-macros/000015.log
+/packs/cpr-additions-macros/CURRENT
+/packs/cpr-additions-macros/LOCK
+/packs/cpr-additions-macros/LOG
+/packs/cpr-additions-macros/LOG.old
+/packs/cpr-additions-macros/MANIFEST-000014
